Group17RobotReal/Group17Robot.cydsn/REBUILD.log
--------------- Rebuild Started: 10/19/2019 02:27:43 Project: Group17Robot, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\Misha\AppData\Local\Cypress Semiconductor\PSoC Creator\4.2" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p "C:\Users\Misha\Documents\PSoC Creator\ECE3091_Group17\Group17RobotReal\Group17Robot.cydsn\Group17Robot.cyprj" -d CY8C5888LTI-LP097 -s "C:\Users\Misha\Documents\PSoC Creator\ECE3091_Group17\Group17RobotReal\Group17Robot.cydsn\Generated_Source\PSoC5" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
ADD: fit.M0029: information: Voltage Reference Information: Vref '1.024V' is connected to terminal 'vminus' of '\ADC:DSM\' but no direct hardware connection exists.
 * C:\Program Files (x86)\Cypress\PSoC Creator\4.2\PSoC Creator\psoc\content\CyComponentLibrary\CyComponentLibrary.cylib\ADC_DelSig_v3_30\PSoC5\ADC_DelSig_v3_30.cysch (Instance:DSM)
 * C:\Users\Misha\Documents\PSoC Creator\ECE3091_Group17\Group17RobotReal\Group17Robot.cydsn\TopDesign\TopDesign.cysch (Instance:vRef_2)
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Log: apr.M0058: The analog placement iterative improvement is 53% done. (App=cydsfit)
Log: apr.M0058: The analog placement iterative improvement is 78% done. (App=cydsfit)
Analog Routing...
Analog Code Generation...
Info: apr.M0060: Comparator 'Comparator[2]@[FFB(Comparator,2)]' is powered up by analog subsystem to support an auto-enabled vref. (App=cydsfit)
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
main.c: In function 'main':
main.c:241:9: warning: implicit declaration of function 'ultimateDebugging' [-Wimplicit-function-declaration]
         ultimateDebugging();
         ^
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/colour.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c colour.c -o .\CortexM3\ARM_GCC_541\Debug\colour.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/ultrasonic.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c ultrasonic.c -o .\CortexM3\ARM_GCC_541\Debug\ultrasonic.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/servo.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c servo.c -o .\CortexM3\ARM_GCC_541\Debug\servo.o
servo.c:34:1: warning: multi-line comment [-Wcomment]
 //arm. These were found by experiment, so if need to recalibrate, you know where to go\
 ^
servo.c: In function 'armTranslate':
servo.c:76:22: warning: suggest parentheses around comparison in operand of '|' [-Wparentheses]
     if (new_position > 2400 | new_position < 1000) {return;}    // if a value is inputed that is bad for the servo
                      ^
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/customMath.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c customMath.c -o .\CortexM3\ARM_GCC_541\Debug\customMath.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/navigation.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c navigation.c -o .\CortexM3\ARM_GCC_541\Debug\navigation.o
navigation.c: In function 'moveUntilPuck':
navigation.c:113:5: warning: implicit declaration of function 'mishaMoveDynamic' [-Wimplicit-function-declaration]
     mishaMoveDynamic(37, 100);
     ^
navigation.c: In function 'moveUntil':
navigation.c:131:9: warning: variable 'compare' set but not used [-Wunused-but-set-variable]
     int compare;                    
         ^
navigation.c: In function 'changeOrientation':
navigation.c:273:5: warning: implicit declaration of function 'mishaSwivel' [-Wimplicit-function-declaration]
     mishaSwivel(degree_change, speed);
     ^
navigation.c: In function 'translateUntil':
navigation.c:288:9: warning: variable 'compare' set but not used [-Wunused-but-set-variable]
     int compare;
         ^
navigation.c: In function 'straightAdjust':
navigation.c:440:9: warning: unused variable 'front_right' [-Wunused-variable]
     int front_right;
         ^
navigation.c:439:9: warning: unused variable 'front_left' [-Wunused-variable]
     int front_left;
         ^
navigation.c: In function 'failsafe':
navigation.c:426:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
navigation.c: In function 'moveUntil':
navigation.c:171:15: warning: 'distance_sensor' may be used uninitialized in this function [-Wmaybe-uninitialized]
         while (distance_sensor < abs(distance_set) && emergency_exit == FALSE) {               // This adjusts for drift 
               ^
navigation.c: In function 'translateUntil':
navigation.c:324:15: warning: 'distance_sensor' may be used uninitialized in this function [-Wmaybe-uninitialized]
         while (distance_sensor > abs(distance_set) && emergency_exit == FALSE) {                // This adjusts for drift 
               ^
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/motor.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c motor.c -o .\CortexM3\ARM_GCC_541\Debug\motor.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/debugging.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c debugging.c -o .\CortexM3\ARM_GCC_541\Debug\debugging.o
debugging.c:199:1: error: expected identifier or '(' before '}' token
 }
 ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 10/19/2019 02:28:41 ---------------
